feat implementação da lógica toggle do menu burguer no responsivo

--- a/index.html
+++ b/index.html
@@ -24,9 +24,13 @@
         /></a>
       </div>
       <nav>
-        <div class="menu-burguer">
+        <a
+          href="#"
+          onclick="showMenuBurguerLinks() ;return false"
+          class="menu-burguer"
+        >
           <img src="./assets/menu-icon.png" alt="" />
-        </div>
+        </a>
         <ul class="menu">
           <li><a class="menu-selected" href="./index.html">Home</a></li>
           <li><a href="./pages/cursos.html">Cursos</a></li>
@@ -37,12 +41,20 @@
     </header>
     <!-- FIM HEADER -->
     <main>
-      <!-- <ul class="links-menu-burguer">
-        <li><a class="menu-selected" href="./index.html">Home</a></li>
-        <li><a href="./pages/cursos.html">Cursos</a></li>
-        <li><a href="./pages/contato.html">Contato</a></li>
-        <li><a href="./pages/area-adm.html">Área ADM</a></li>
-      </ul> -->
+      <ul id="menu-burguer" class="desativado">
+        <li>
+          <a class="menu-selected" href="./index.html">Home</a>
+        </li>
+        <li>
+          <a href="./pages/cursos.html">Cursos</a>
+        </li>
+        <li>
+          <a href="./pages/contato.html">Contato</a>
+        </li>
+        <li>
+          <a href="./pages/area-adm.html">Área ADM</a>
+        </li>
+      </ul>
       <a href="https://wa.link/lsvbsn" target="_blank"
         ><img
           class="icone-whatsapp"
