feat mudança de cor dos links do menu burguer, e adição de classe para link selecionado depende a página

--- a/pages/contato.html
+++ b/pages/contato.html
@@ -43,9 +43,9 @@
     </header>
     <!-- FIM DO HEADER -->
     <ul id="menu-burguer" class="desativado">
-      <li><a class="menu-selected" href="../index.html">Home</a></li>
+      <li><a href="../index.html">Home</a></li>
       <li><a href="../pages/cursos.html">Cursos</a></li>
-      <li><a href="../pages/contato.html">Contato</a></li>
+      <li><a class="menu-selected" href="../pages/contato.html">Contato</a></li>
       <li><a href="../pages/area-adm.html">Área ADM</a></li>
     </ul>
     <a href="https://wa.link/lsvbsn" target="_blank"
