--- a/pages/area-adm.html
+++ b/pages/area-adm.html
@@ -43,10 +43,12 @@
     </header>
     <!-- FIM DO HEADER -->
     <ul id="menu-burguer" class="desativado">
-      <li><a class="menu-selected" href="../index.html">Home</a></li>
+      <li><a href="../index.html">Home</a></li>
       <li><a href="../pages/cursos.html">Cursos</a></li>
       <li><a href="../pages/contato.html">Contato</a></li>
-      <li><a href="../pages/area-adm.html">Área ADM</a></li>
+      <li>
+        <a class="menu-selected" href="../pages/area-adm.html">Área ADM</a>
+      </li>
     </ul>
     <main class="area-adm-main-container">
       <!-- INICIO DO LAYOUT DO MENU LATERAL ESQUERDO COM AS OPÇÕES TURMAS, MATRICULAS E FINANCEIRO -->
