--- a/pages/cursos.html
+++ b/pages/cursos.html
@@ -44,8 +44,8 @@
     <!-- FIM DO HEADER -->
     <main>
       <ul id="menu-burguer" class="desativado">
-        <li><a class="menu-selected" href="../index.html">Home</a></li>
-        <li><a href="../pages/cursos.html">Cursos</a></li>
+        <li><a href="../index.html">Home</a></li>
+        <li><a class="menu-selected" href="../pages/cursos.html">Cursos</a></li>
         <li><a href="../pages/contato.html">Contato</a></li>
         <li><a href="../pages/area-adm.html">Área ADM</a></li>
       </ul>
