feat terminando detalhes de responsividades na home, cursos e area adm page

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
               ><img src="./assets/icon-twitter1.png" alt="Logo do Twitter"
             /></a>
             <a
-              href="https://www.linkedin.com/in/jair-dami%C3%A1n-mart%C3%ADnez-bautista-4b35b1a6/"
+              href="https://www.linkedin.com/in/jair-damian/"
               target="_blank"
               ><img src="./assets/icon-linkedin1.png" alt="Logo do Linkedin"
             /></a>
