--- a/pages/area-adm.html
+++ b/pages/area-adm.html
@@ -89,7 +89,7 @@
           <div class="area-adm-busca-container">
             <input
               id="area-adm-caixa-texto"
-              placeholder="Digite o número da turma"
+              placeholder="Digite o nome da turma"
               type="text"
               name="buscar"
             />
