--- a/pages/area-adm.html
+++ b/pages/area-adm.html
@@ -221,30 +221,16 @@
         <div class="footer-endereco">
           <h3>Endereço</h3>
           <div>
-            <div class="mapouter">
-              <div class="gmap_canvas">
-                <iframe
-                  width="400"
-                  height="280"
-                  id="gmap_canvas"
-                  src="https://maps.google.com/maps?q=rua%20pa%C3%ADs%20leme%20215&t=&z=13&ie=UTF8&iwloc=&output=embed"
-                  frameborder="0"
-                  scrolling="no"
-                  marginheight="0"
-                  marginwidth="0"
-                ></iframe
-                ><a href="https://fmovies-online.net">fmovies</a><br /><a
-                  href="https://www.embedgooglemap.net"
-                  >interactive google map for website</a
-                ><style>
-                  .gmap_canvas {
-                    overflow: hidden;
-                    background: none !important;
-                    height: 280px;
-                    width: 400px;
-                  }
-                </style>
-              </div>
+            <div class="google-map">
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3656.9962772954627!2d-46.700690885022055!3d-23.568577184679345!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce57a7c7ace4c3%3A0x586759cab9b5c95a!2sR.%20Pais%20Leme%2C%20215%20-%20Pinheiros%2C%20S%C3%A3o%20Paulo%20-%20SP%2C%2005424-150!5e0!3m2!1spt-BR!2sbr!4v1686407857294!5m2!1spt-BR!2sbr"
+                width="600"
+                height="450"
+                style="border: 0"
+                allowfullscreen=""
+                loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"
+              ></iframe>
             </div>
             <p>R. Pais Leme, 215. CEP 05424-150 - Pinheiros</p>
           </div>
