feat validação de email por meio de regex e envio automático do form de contato para email

--- a/pages/contato.html
+++ b/pages/contato.html
@@ -56,7 +56,11 @@
     /></a>
     <!-- INICIO DO CONTENT COM O FORM DE CONTATO -->
     <section class="contato-content">
-      <form class="contato-formulario" method="POST" action="/">
+      <form
+        action="https://formsubmit.co/el/pukoyo"
+        method="POST"
+        class="contato-formulario"
+      >
         <h2 class="contato-titulo-formulario">Fale Conosco</h2>
         <div class="contato-form-grupo">
           <label for="nome">Nome</label>
@@ -76,7 +80,6 @@
             type="email"
             name="email"
             id="email"
-            pattern="/^[a-zA-Z0-9.!#$%&'*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*$/"
           />
         </div>
         <div class="contato-form-grupo">
