feat validação de input de parcelas para matrículas, deve ser maior que 0, menor ou igual a 10

--- a/pages/area-adm.html
+++ b/pages/area-adm.html
@@ -135,7 +135,7 @@
               <input
                 required
                 class="botoes-matricula"
-                type="number"
+                type="text"
                 name="numParcelas"
                 id="numParcelas"
               />
